--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,13 +23,21 @@ header p {
   color: gainsboro;
 }
 
-h1 {
+.title-one {
   margin-bottom: 5%;
   font-size: 52px;
   color: seagreen;
   text-shadow: 2px 2px white;
   text-align: center;
+  transform: translate(0px, 120%);
+  opacity: 0;
 }
+.title-one._active {
+  transform: translate(0px, 0px);
+  transition: all 0.8s ease 0s;
+  opacity: 1;
+}
+
 .photo {
   width: 400px;
   height: 520px;
@@ -38,6 +46,13 @@ h1 {
   box-shadow: 10px 10px 5px rgba(40, 110, 40, 0.5);
   cursor: pointer;
   transition: .3s;
+  transform: scale(0);
+  opacity: 0;
+}
+.photo._active {
+  transform: scale(1);
+  transition: transform 1.2s ease .5s;
+  opacity: 1;
 }
 .about {
   font-size: 25px;
@@ -53,6 +68,13 @@ h1 {
   font-size: 52px;
   color: #ff9500;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.67);
+  transform: translate(0px, 120%);
+  opacity: 0;
+}
+.education h2._active {
+  transform: translate(0px, 0px);
+  transition: all 0.8s ease .3s;
+  opacity: 1;
 }
 .description-education {
   display: flex;
@@ -83,6 +105,19 @@ h1 {
 .description-education-frontend img:hover, .description-education-backend img:hover {
   width: 100%;
 }
+.description-education-frontend {
+  transform: translate(-10%, 50%);
+  opacity: 0;
+}
+.description-education-backend {
+  transform: translate(10%, 50%);
+  opacity: 0;
+}
+.description-education-frontend._active, .description-education-backend._active {
+  transform: translate(0px, 0px);
+  opacity: 1;
+  transition: all 1s ease .2s;
+}
 
 .projects {
   border-radius: 20px;
@@ -94,11 +129,26 @@ h1 {
   color: rgb(255, 149, 0);
   text-shadow: 2px 2px black;
   text-align: center;
+  transform: translate(0px, 120%);
+  opacity: 0;
 }
+.projects>h2._active {
+  transform: translate(0px, 0px);
+  transition: all 0.8s ease .3s;
+  opacity: 1;
+}
+
 .task-box {
   width: 100%;
   height: 300px;
   position: relative;
+  transform: translateX(-100%);
+  opacity: 0;
+}
+.task-box._active {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: all 1s ease .4s;
 }
 
 .preview-task-box {
@@ -139,6 +189,13 @@ footer {
   display: flex;
   justify-content: space-around;
   list-style: none;
+  opacity: 0;
+  transform: scale(0);
+}
+.list._active {
+  transform: scale(1);
+  opacity: 1;
+  transition: all 1.5s ease .3s;
 }
 .item-list {
   cursor: pointer;
